--- a/miniprogram-1/project.private.config.json
+++ b/miniprogram-1/project.private.config.json
@@ -22,11 +22,25 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/login/login",
+          "name": "pages/home/home",
           "pathName": "pages/home/home",
           "query": "",
           "scene": null,
           "launchMode": "default"
+        },
+        {
+          "name": "pages/login/login",
+          "pathName": "pages/login/login",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/login/login",
+          "pathName": "pages/home/home",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         },
         {
           "name": "pages/index/index",
