--- a/miniprogram-1/miniprogram/app.json
+++ b/miniprogram-1/miniprogram/app.json
@@ -1,9 +1,10 @@
 {
   "pages": [
+    "pages/home/home",
     "pages/login/login",
     "pages/index/index",
-    "pages/home/home"
-
+    "pages/profile/profile",
+    "pages/history/history"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -11,6 +12,19 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "兰花识别",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/home/home",
+      "text": "首页",
+      "iconPath": "images/icons/home.png",
+      "selectedIconPath": "images/icons/home_select.png"
+    }, {
+      "pagePath": "pages/profile/profile",
+      "text": "我的",
+      "iconPath": "images/icons/profile.png",
+      "selectedIconPath": "images/icons/profile_select.png"
+    }]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
